k8s/k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-server
  labels:
    app: go-server
    service: go-server
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: go-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server-v1
  labels:
    app: go-server
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-server
  template:
    metadata:
      labels:
        app: go-server
        version:  v1
    spec:
      serviceAccountName: go-server
      containers:
      - name: go-server-v1
        image: docker.io/cmwylie19/go-server-1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
