k8s/destinationrule-server.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: go-server
spec:
  host: go-server
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
