k8s/server-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-server
spec:
  hosts:
  - "*"
  gateways:
  - server-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: go-server
        port:
          number: 8080
